welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: type mismatch;
 found   : String("A")
 required: Boolean
	if("A"){
           ^BDRBuggle:6: error: type mismatch;
 found   : String("B")
 required: Boolean
	if("B"){
           ^BDRBuggle:10: error: type mismatch;
 found   : String("R")
 required: Boolean
	if("R"){
           ^BDRBuggle:14: error: type mismatch;
 found   : String("L")
 required: Boolean
	if("L"){
           ^BDRBuggle:18: error: type mismatch;
 found   : String("I")
 required: Boolean
	if("I"){
           ^BDRBuggle:23: error: type mismatch;
 found   : String("C")
 required: Boolean
	if("C"){
           ^BDRBuggle:28: error: type mismatch;
 found   : String("Z")
 required: Boolean
	if("Z"){
           ^BDRBuggle:31: error: type mismatch;
 found   : String("Y")
 required: Boolean
	if("Y"){
           ^BDRBuggle:35: error: type mismatch;
 found   : String("Z")
 required: Boolean
	if("Z"){
           ^