welcome.lessons.welcome.bdr.BDR.scala.code
while(estSurMessage()){
	litMessage();
	if("A"){
		avance();
	}
	if("B"){
		avance();
		avance();
	}
	if("R"){
		droite();
		avance();
	}
	if("L"){
		gauche();
		avance();
	}
	if("I"){
		droite();
		droite();
		avance();
	}
	if("C"){
		avance();
		avance();
		avance();
	}
	if("Z"){
		recule()
	}
	if("Y"){
		recule();
		recule();
	}
	if("Z"){
		recule();
		recule();
		recule();
	}
}
